# libatspi-test

./: CMakeLists.txt  announcer.c  listener.c
